# schemascii

./: .gitignore  FORMAT.md  FORMAT.txt  Makefile  README.md  algorithm.md  designators.md  format.md  index.html  options.md  pyproject.toml  release.py  schemascii_example.css  setup.py  supported-components.md
examples/: schemascii_example.css  wires_test.txt
schemascii/: OLD_components_render.py  __init__.py  __main__.py  annoline.py  annotation.py  component.py  components.py  components_data.py  components_render.py  configs.py  data.py  data_consumer.py  data_parse.py  drawing.py  edgemarks.py  errors.py  findcomponents.py  findflags.py  findwires.py  flags.py  grid.py  inline_config.py  metric.py  net.py  refdes.py  svg.py  svg_utils.py  utils.py  wire.py  wire_tag.py  wires.py
schemascii/components/: __init__.py  battery.py  capacitor.py  diode.py  inductor.py  resistor.py
scripts/: cdoc.py  docs.py  documentation.py  monkeypatch.py  release.py  scriptutils.py  web_startup.js  web_startup.py
test_data/: all_gates_3t.txt  blob_test.py  stresstest.txt  test1.txt  test_charge_pump.txt  test_resistors.txt  test_switches.txt  wires_test.txt
